build_log.txt
[>] Running cmake...
CMake Warning (dev) at /usr/share/cmake/Modules/FindOpenGL.cmake:534 (message):
  Policy CMP0072 is not set: FindOpenGL prefers GLVND by default when
  available.  Run "cmake --help-policy CMP0072" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  FindOpenGL found both a legacy GL library:

    OPENGL_gl_LIBRARY: /usr/lib/libGL.so

  and GLVND libraries for OpenGL and GLX:

    OPENGL_opengl_LIBRARY: /usr/lib/libOpenGL.so
    OPENGL_glx_LIBRARY: /usr/lib/libGLX.so

  OpenGL_GL_PREFERENCE has not been set to "GLVND" or "LEGACY", so for
  compatibility with CMake 3.10 and below the legacy GL library will be used.
Call Stack (most recent call first):
  CMakeLists.txt:12 (find_package)
This warning is for project developers.  Use -Wno-dev to suppress it.

-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/light/Documents/C3D/Calcium3D/build
[>] Building project...
[ 12%] Building CXX object CMakeFiles/calcium3d.dir/src/Renderer/Passes/ShadowPass.cpp.o
[ 12%] Building CXX object CMakeFiles/calcium3d.dir/src/Core/main.cpp.o
[ 12%] Building CXX object CMakeFiles/calcium3d.dir/src/Renderer/Passes/GeometryPass.cpp.o
[ 12%] Building CXX object CMakeFiles/calcium3d.dir/src/Core/Application.cpp.o
[ 12%] Building CXX object CMakeFiles/calcium3d.dir/src/Editor/EditorLayer.cpp.o
[ 17%] Building CXX object CMakeFiles/calcium3d.dir/src/Renderer/Passes/SkyPass.cpp.o
[ 17%] Building CXX object CMakeFiles/calcium3d.dir/src/Renderer/Pipelines/EditorPipeline.cpp.o
[ 19%] Building CXX object CMakeFiles/calcium3d.dir/src/Renderer/Passes/TransparencyPass.cpp.o
[ 21%] Building CXX object CMakeFiles/calcium3d.dir/src/Renderer/RenderPipeline.cpp.o
In file included from /home/light/Documents/C3D/Calcium3D/src/Renderer/RenderPass.h:3,
                 from /home/light/Documents/C3D/Calcium3D/src/Renderer/RenderPipeline.h:5,
                 from /home/light/Documents/C3D/Calcium3D/src/Renderer/RenderPipeline.cpp:1:
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:55:23: error: redeclaration of ‘bool RenderContext::showSkybox’
   55 |     bool showSkybox = true;
      |                       ^~~~
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:31:10: note: previous declaration ‘bool RenderContext::showSkybox’
   31 |     bool showSkybox = true;
      |          ^~~~~~~~~~
In file included from /home/light/Documents/C3D/Calcium3D/src/Renderer/RenderPass.h:3,
                 from /home/light/Documents/C3D/Calcium3D/src/Renderer/RenderPipeline.h:5,
                 from /home/light/Documents/C3D/Calcium3D/src/Renderer/Pipelines/EditorPipeline.h:3,
                 from /home/light/Documents/C3D/Calcium3D/src/Renderer/Pipelines/EditorPipeline.cpp:1:
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:55:23: error: redeclaration of ‘bool RenderContext::showSkybox’
   55 |     bool showSkybox = true;
      |                       ^~~~
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:31:10: note: previous declaration ‘bool RenderContext::showSkybox’
   31 |     bool showSkybox = true;
      |          ^~~~~~~~~~
In file included from /home/light/Documents/C3D/Calcium3D/src/Renderer/RenderPass.h:3,
                 from /home/light/Documents/C3D/Calcium3D/src/Renderer/Passes/TransparencyPass.h:3,
                 from /home/light/Documents/C3D/Calcium3D/src/Renderer/Passes/TransparencyPass.cpp:1:
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:55:23: error: redeclaration of ‘bool RenderContext::showSkybox’
   55 |     bool showSkybox = true;
      |                       ^~~~
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:31:10: note: previous declaration ‘bool RenderContext::showSkybox’
   31 |     bool showSkybox = true;
      |          ^~~~~~~~~~
In file included from /home/light/Documents/C3D/Calcium3D/src/Renderer/RenderPass.h:3,
                 from /home/light/Documents/C3D/Calcium3D/src/Renderer/Passes/SkyPass.h:3,
                 from /home/light/Documents/C3D/Calcium3D/src/Renderer/Passes/SkyPass.cpp:1:
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:55:23: error: redeclaration of ‘bool RenderContext::showSkybox’
   55 |     bool showSkybox = true;
      |                       ^~~~
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:31:10: note: previous declaration ‘bool RenderContext::showSkybox’
   31 |     bool showSkybox = true;
      |          ^~~~~~~~~~
In file included from /home/light/Documents/C3D/Calcium3D/src/Renderer/RenderPass.h:3,
                 from /home/light/Documents/C3D/Calcium3D/src/Renderer/Passes/ShadowPass.h:3,
                 from /home/light/Documents/C3D/Calcium3D/src/Renderer/Passes/ShadowPass.cpp:1:
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:55:23: error: redeclaration of ‘bool RenderContext::showSkybox’
   55 |     bool showSkybox = true;
      |                       ^~~~
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:31:10: note: previous declaration ‘bool RenderContext::showSkybox’
   31 |     bool showSkybox = true;
      |          ^~~~~~~~~~
In file included from /home/light/Documents/C3D/Calcium3D/src/Renderer/RenderPass.h:3,
                 from /home/light/Documents/C3D/Calcium3D/src/Renderer/Passes/GeometryPass.h:3,
                 from /home/light/Documents/C3D/Calcium3D/src/Renderer/Passes/GeometryPass.cpp:1:
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:55:23: error: redeclaration of ‘bool RenderContext::showSkybox’
   55 |     bool showSkybox = true;
      |                       ^~~~
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:31:10: note: previous declaration ‘bool RenderContext::showSkybox’
   31 |     bool showSkybox = true;
      |          ^~~~~~~~~~
make[2]: *** [CMakeFiles/calcium3d.dir/build.make:373: CMakeFiles/calcium3d.dir/src/Renderer/RenderPipeline.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/calcium3d.dir/build.make:359: CMakeFiles/calcium3d.dir/src/Renderer/Pipelines/EditorPipeline.cpp.o] Error 1
In file included from /home/light/Documents/C3D/Calcium3D/src/Core/Application.h:15,
                 from /home/light/Documents/C3D/Calcium3D/src/Core/Application.cpp:1:
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:55:23: error: redeclaration of ‘bool RenderContext::showSkybox’
   55 |     bool showSkybox = true;
      |                       ^~~~
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:31:10: note: previous declaration ‘bool RenderContext::showSkybox’
   31 |     bool showSkybox = true;
      |          ^~~~~~~~~~
In file included from /home/light/Documents/C3D/Calcium3D/src/Core/Application.h:15,
                 from /home/light/Documents/C3D/Calcium3D/src/Core/main.cpp:1:
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:55:23: error: redeclaration of ‘bool RenderContext::showSkybox’
   55 |     bool showSkybox = true;
      |                       ^~~~
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:31:10: note: previous declaration ‘bool RenderContext::showSkybox’
   31 |     bool showSkybox = true;
      |          ^~~~~~~~~~
In file included from /home/light/Documents/C3D/Calcium3D/src/Renderer/RenderPass.h:3,
                 from /home/light/Documents/C3D/Calcium3D/src/Renderer/Passes/SkyPass.h:3,
                 from /home/light/Documents/C3D/Calcium3D/src/Editor/EditorLayer.cpp:7:
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:55:23: error: redeclaration of ‘bool RenderContext::showSkybox’
   55 |     bool showSkybox = true;
      |                       ^~~~
/home/light/Documents/C3D/Calcium3D/src/Renderer/RenderContext.h:31:10: note: previous declaration ‘bool RenderContext::showSkybox’
   31 |     bool showSkybox = true;
      |          ^~~~~~~~~~
make[2]: *** [CMakeFiles/calcium3d.dir/build.make:345: CMakeFiles/calcium3d.dir/src/Renderer/Passes/TransparencyPass.cpp.o] Error 1
make[2]: *** [CMakeFiles/calcium3d.dir/build.make:317: CMakeFiles/calcium3d.dir/src/Renderer/Passes/ShadowPass.cpp.o] Error 1
make[2]: *** [CMakeFiles/calcium3d.dir/build.make:303: CMakeFiles/calcium3d.dir/src/Renderer/Passes/GeometryPass.cpp.o] Error 1
make[2]: *** [CMakeFiles/calcium3d.dir/build.make:331: CMakeFiles/calcium3d.dir/src/Renderer/Passes/SkyPass.cpp.o] Error 1
make[2]: *** [CMakeFiles/calcium3d.dir/build.make:79: CMakeFiles/calcium3d.dir/src/Core/main.cpp.o] Error 1
make[2]: *** [CMakeFiles/calcium3d.dir/build.make:93: CMakeFiles/calcium3d.dir/src/Core/Application.cpp.o] Error 1
make[2]: *** [CMakeFiles/calcium3d.dir/build.make:429: CMakeFiles/calcium3d.dir/src/Editor/EditorLayer.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/calcium3d.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
[ERROR] Build failed!
